# packages-pcre

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  configure.in  pcre.doc  pcre.pl  pcre4pl.c  test_pcre.pl  test_pcre_load.pl
cmake/: FindPCRE.cmake
