dnl Process this file with autoconf to produce a configure script.

AC_INIT(install-sh)
AC_PREREQ([2.50])
AC_CONFIG_HEADER(config.h)

AC_SUBST(PCRE_TARGETS)
AC_SUBST(PCRE_PLTARGETS)

PCRE_TARGETS=nolib
PCRE_PLTARGETS=

m4_include([../ac_swi_c.m4])

if test -z "$REPREFIX"; then
  AC_CHECK_HEADER(pcre.h,
		  [ AC_DEFINE([HAVE_PCRE_H], 1,
			      [Define to 1 if you have <pcre.h>.])
		    PCREH=yes
		  ],
		  PCREH=no)

  if test "$PCREH" = yes; then
    AC_CHECK_LIB(pcre, pcre_compile,
		 LIBS="$LIBS -lpcre"
		 PCRELIB=yes,
		 PCRELIB=no)
  fi
fi

if test "$PCRELIB" = yes; then
  PCRE_TARGETS="pcre4pl.$SO"
  PCRE_PLTARGETS=pcre.pl
fi

AC_OUTPUT(Makefile)
